# flask-hello-world

./: app.py  pyproject.toml  requirements.txt  sandbox.ipynb
templates/: index.html
